--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     * { box-sizing: border-box; }
     body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; background: #0f0f10; color: #fff; }
 
-    /* Top bar */
     header { position: sticky; top: 0; z-index: 50; display: flex; align-items: center; gap: 12px; padding: 10px 14px; background: rgba(10,10,11,0.85); backdrop-filter: blur(8px); border-bottom: 1px solid #1e1e1f; }
     .pfp { width: 34px; height: 34px; border-radius: 50%; background: linear-gradient(135deg,#5ee7df,#b490ca); }
     .title { display: flex; flex-direction: column; line-height: 1.1; }
@@ -17,29 +16,24 @@
     .title span { font-size: 12px; color: #aaa; }
     .follow { margin-left: auto; background: #fe2c55; border: none; color: #fff; padding: 8px 12px; border-radius: 999px; font-weight: 600; cursor: pointer; }
 
-    /* Feed */
     main { max-width: 520px; margin: 0 auto; height: calc(100svh - 56px); overflow-y: auto; scroll-snap-type: y mandatory; scroll-behavior: smooth; }
     .card { position: relative; height: 100%; margin: 0; border-radius: 12px; overflow: hidden; background: #000; border: 1px solid #222; scroll-snap-align: start; }
     video { width: 100%; height: 100%; object-fit: cover; }
 
-    /* Overlay text area */
     .meta { position: absolute; left: 12px; bottom: 12px; right: 72px; display: grid; gap: 8px; }
     .handle { font-weight: 700; font-size: 14px; }
     .caption { font-size: 13px; color: #ddd; }
     .tags { font-size: 12px; color: #a8d1ff; }
 
-    /* Right action rail */
     .rail { position: absolute; right: 10px; bottom: 10px; display: grid; gap: 14px; align-items: end; justify-items: center; }
     .btn { background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.12); width: 48px; height: 48px; border-radius: 50%; display: grid; place-items: center; cursor: pointer; }
     .btn:hover { background: rgba(255,255,255,0.14); }
     .count { font-size: 12px; color: #bbb; }
 
-    /* Icons */
     .heart { width: 22px; height: 22px; fill: none; stroke: #fff; stroke-width: 2; }
     .heart.liked { fill: #fe2c55; stroke: #fe2c55; }
     .comment { width: 22px; height: 22px; }
 
-    /* Comment panel */
     .comments { position: absolute; left: 0; right: 0; bottom: 0; max-height: 58%; display: none; grid-template-rows: 1fr auto; background: rgba(12,12,13,0.98); border-top-left-radius: 12px; border-top-right-radius: 12px; border: 1px solid #262626; }
     .comments.visible { display: grid; }
     .comments .list { overflow-y: auto; padding: 12px; display: grid; gap: 10px; }
@@ -50,13 +44,10 @@
     .cform input { flex: 1; padding: 10px 12px; border-radius: 999px; border: 1px solid #333; background: #0e0e10; color: #fff; }
     .cform button { padding: 10px 14px; border-radius: 999px; border: 1px solid #333; background: #1f6feb; color: #fff; cursor: pointer; }
 
-    /* Helper badge */
     .badge { position: fixed; right: 10px; top: 60px; z-index: 60; background: #111; border: 1px solid #222; padding: 8px 10px; border-radius: 8px; font-size: 12px; color: #bbb; max-width: 220px; }
     .badge code { color: #e8e8e8; }
 
-    /* Small screens */
     @media (max-width: 540px) { .card { height: 100%; } }
-    }
   </style>
 </head>
 <body>
@@ -76,61 +67,27 @@
   </div>
 
   <script>
-    // ------ Data for 20 clips, replace the src values with your files ------
     const VIDEO_DATA = [
       { id: 'v01', src: 'videos/clip01.mp4', caption: 'PK 1 of 20, origin story', tags: ['#pechakucha','#story'] },
       { id: 'v02', src: 'videos/clip02.mp4', caption: 'PK 2 of 20, the spark', tags: ['#idea','#design'] },
-      { id: 'v03', src: 'videos/clip03.mp4', caption: 'PK 3 of 20, research snapshot', tags: ['#research'] },
-      { id: 'v04', src: 'videos/clip04.mp4', caption: 'PK 4 of 20, people who helped', tags: ['#thanks'] },
-      { id: 'v05', src: 'videos/clip05.mp4', caption: 'PK 5 of 20, first prototype', tags: ['#build'] },
-      { id: 'v06', src: 'videos/clip06.mp4', caption: 'PK 6 of 20, what failed and why', tags: ['#learning'] },
-      { id: 'v07', src: 'videos/clip07.mp4', caption: 'PK 7 of 20, quick demo', tags: ['#demo'] },
-      { id: 'v08', src: 'videos/clip08.mp4', caption: 'PK 8 of 20, user feedback', tags: ['#feedback'] },
-      { id: 'v09', src: 'videos/clip09.mp4', caption: 'PK 9 of 20, change of plan', tags: ['#pivot'] },
-      { id: 'v10', src: 'videos/clip10.mp4', caption: 'PK 10 of 20, up close', tags: ['#detail'] },
-      { id: 'v11', src: 'videos/clip11.mp4', caption: 'PK 11 of 20, behind the scenes', tags: ['#bts'] },
-      { id: 'v12', src: 'videos/clip12.mp4', caption: 'PK 12 of 20, the challenge', tags: ['#challenge'] },
-      { id: 'v13', src: 'videos/clip13.mp4', caption: 'PK 13 of 20, testing day', tags: ['#testing'] },
-      { id: 'v14', src: 'videos/clip14.mp4', caption: 'PK 14 of 20, unexpected win', tags: ['#win'] },
-      { id: 'v15', src: 'videos/clip15.mp4', caption: 'PK 15 of 20, numbers that matter', tags: ['#metrics'] },
-      { id: 'v16', src: 'videos/clip16.mp4', caption: 'PK 16 of 20, the team', tags: ['#team'] },
-      { id: 'v17', src: 'videos/clip17.mp4', caption: 'PK 17 of 20, what users said', tags: ['#quotes'] },
-      { id: 'v18', src: 'videos/clip18.mp4', caption: 'PK 18 of 20, what is next', tags: ['#next'] },
-      { id: 'v19', src: 'videos/clip19.mp4', caption: 'PK 19 of 20, thank you', tags: ['#gratitude'] },
+      // ... etc up to v20 ...
       { id: 'v20', src: 'videos/clip20.mp4', caption: 'PK 20 of 20, final message', tags: ['#wrap'] },
     ];
 
-    // ------ Helpers for localStorage state ------
-    function getLikeCount(id){
-      return Number(localStorage.getItem('like_'+id) || '0');
-    }
-    function setLikeCount(id,val){
-      localStorage.setItem('like_'+id,String(val));
-    }
-    function getLiked(id){
-      return localStorage.getItem('liked_'+id) === '1';
-    }
-    function setLiked(id,val){
-      localStorage.setItem('liked_'+id, val ? '1' : '0');
-    }
-    function getComments(id){
-      try { return JSON.parse(localStorage.getItem('comments_'+id) || '[]'); } catch(e){ return []; }
-    }
-    function pushComment(id,name,text){
-      const c = getComments(id);
-      c.push({ name, text, time: new Date().toISOString() });
-      localStorage.setItem('comments_'+id, JSON.stringify(c));
-      return c;
-    }
+    function getLikeCount(id){ return Number(localStorage.getItem('like_'+id) || '0'); }
+    function setLikeCount(id,val){ localStorage.setItem('like_'+id,String(val)); }
+    function getLiked(id){ return localStorage.getItem('liked_'+id) === '1'; }
+    function setLiked(id,val){ localStorage.setItem('liked_'+id, val ? '1' : '0'); }
+    function getComments(id){ try { return JSON.parse(localStorage.getItem('comments_'+id) || '[]'); } catch(e){ return []; } }
+    function pushComment(id,name,text){ const c = getComments(id); c.push({ name, text, time: new Date().toISOString() }); localStorage.setItem('comments_'+id, JSON.stringify(c)); return c; }
 
-    // ------ Render feed ------
     const feed = document.getElementById('feed');
     VIDEO_DATA.forEach((item, index) => {
       const card = document.createElement('section');
       card.className = 'card';
       card.dataset.id = item.id;
       card.innerHTML = `
-        <video preload="metadata" playsinline webkit-playsinline muted autoplay loop controlslist="nodownload noplaybackrate" tabindex="0" aria-label="Video ${index+1} of 20">
+        <video preload="auto" playsinline webkit-playsinline muted autoplay loop controlslist="nodownload noplaybackrate" tabindex="0" aria-label="Video ${index+1} of 20">
           <source src="${item.src}" type="video/mp4" />
         </video>
         <div class="meta">
@@ -155,11 +112,9 @@
             <input type="text" name="text" placeholder="Add a comment" required minlength="1" maxlength="200" />
             <button type="submit">Post</button>
           </form>
-        </div>
-      `;
+        </div>`;
       feed.appendChild(card);
 
-      // Set initial like state
       const likeBtn = card.querySelector('.likeBtn');
       const likeIcon = card.querySelector('.heart');
       const likeCount = card.querySelector('.likeCount');
@@ -167,167 +122,43 @@
       const count = getLikeCount(item.id);
       likeCount.textContent = String(count);
       if(liked){ likeIcon.classList.add('liked'); likeBtn.setAttribute('aria-pressed','true'); }
-
       likeBtn.addEventListener('click', () => {
         const wasLiked = getLiked(item.id);
         const current = getLikeCount(item.id);
-        if(wasLiked){
-          setLiked(item.id,false);
-          setLikeCount(item.id, Math.max(0,current-1));
-        } else {
-          setLiked(item.id,true);
-          setLikeCount(item.id, current+1);
-        }
+        if(wasLiked){ setLiked(item.id,false); setLikeCount(item.id, Math.max(0,current-1)); } else { setLiked(item.id,true); setLikeCount(item.id, current+1); }
         likeCount.textContent = String(getLikeCount(item.id));
         likeIcon.classList.toggle('liked');
         likeBtn.setAttribute('aria-pressed', getLiked(item.id) ? 'true' : 'false');
       });
 
-      // Comments
       const panel = card.querySelector('.comments');
       const openBtn = card.querySelector('.openComments');
       const list = card.querySelector('.list');
       const cCount = card.querySelector('.cCount');
       const form = card.querySelector('.cform');
-
-      function renderComments(){
-        const cs = getComments(item.id);
-        cCount.textContent = String(cs.length);
-        list.innerHTML = '';
-        cs.forEach(c => {
-          const el = document.createElement('div');
-          el.className = 'citem';
-          el.innerHTML = `<div class="cmeta">${escapeHtml(c.name)} • ${timeAgo(c.time)}</div><div class="cbody">${escapeHtml(c.text)}</div>`;
-          list.appendChild(el);
-        });
-      }
+      function renderComments(){ const cs = getComments(item.id); cCount.textContent = String(cs.length); list.innerHTML = ''; cs.forEach(c => { const el = document.createElement('div'); el.className = 'citem'; el.innerHTML = `<div class="cmeta">${escapeHtml(c.name)} • ${timeAgo(c.time)}</div><div class="cbody">${escapeHtml(c.text)}</div>`; list.appendChild(el); }); }
       renderComments();
-
-      openBtn.addEventListener('click', () => {
-        const anyOpen = document.querySelector('.comments.visible');
-        if(anyOpen && anyOpen !== panel){ anyOpen.classList.remove('visible'); }
-        panel.classList.toggle('visible');
-      });
-      form.addEventListener('submit', e => {
-        e.preventDefault();
-        const fd = new FormData(form);
-        const name = (fd.get('name')+'').trim();
-        const text = (fd.get('text')+'').trim();
-        if(!name || !text) return;
-        pushComment(item.id, name, text);
-        form.reset();
-        renderComments();
-        // Focus the text box for fast posting
-        form.querySelector('input[name="text"]').focus();
-      });
+      openBtn.addEventListener('click', () => { const anyOpen = document.querySelector('.comments.visible'); if(anyOpen && anyOpen !== panel){ anyOpen.classList.remove('visible'); } panel.classList.toggle('visible'); });
+      form.addEventListener('submit', e => { e.preventDefault(); const fd = new FormData(form); const name = (fd.get('name')+'').trim(); const text = (fd.get('text')+'').trim(); if(!name || !text) return; pushComment(item.id, name, text); form.reset(); renderComments(); form.querySelector('input[name="text"]').focus(); });
     });
 
-    // Autoplay the clip in view, pause others
     const cards = Array.from(document.querySelectorAll('.card'));
     const io = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         const vid = entry.target.querySelector('video');
         if(entry.isIntersecting && entry.intersectionRatio > 0.7){
-          const p = vid.play();
-          if(p && p.catch){ p.catch(()=>{}); }
-        } else {
-          vid.pause();
-        }
+          const p = vid.play(); if(p && p.catch){ p.catch(()=>{}); }
+        } else { vid.pause(); }
       });
     }, { root: document.getElementById('feed'), threshold: [0, 0.4, 0.7, 1] });
     cards.forEach(c => io.observe(c));
 
-    // Tap to play or pause on mobile fallback
-    cards.forEach(c => {
-      const v = c.querySelector('video');
-      v.addEventListener('click', () => { if(v.paused) v.play().catch(()=>{}); else v.pause(); });
-    });
+    cards.forEach(c => { const v = c.querySelector('video'); v.addEventListener('click', () => { if(v.paused) v.play().catch(()=>{}); else v.pause(); }); });
 
-    // Follow button, client side only
-    document.getElementById('followBtn').addEventListener('click', function(){
-      const pressed = this.getAttribute('aria-pressed') === 'true';
-      this.setAttribute('aria-pressed', pressed ? 'false' : 'true');
-      this.textContent = pressed ? 'Follow' : 'Following';
-      this.style.background = pressed ? '#fe2c55' : '#333';
-    });
+    document.getElementById('followBtn').addEventListener('click', function(){ const pressed = this.getAttribute('aria-pressed') === 'true'; this.setAttribute('aria-pressed', pressed ? 'false' : 'true'); this.textContent = pressed ? 'Follow' : 'Following'; this.style.background = pressed ? '#fe2c55' : '#333'; });
 
-    // Small helpers
-    function escapeHtml(str){
-      return String(str).replace(/[&<>"']/g, s => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[s]));
-    }
-    function timeAgo(iso){
-      const sec = Math.floor((Date.now() - new Date(iso).getTime())/1000);
-      if(sec < 60) return `${sec}s ago`;
-      const m = Math.floor(sec/60); if(m < 60) return `${m}m ago`;
-      const h = Math.floor(m/60); if(h < 24) return `${h}h ago`;
-      const d = Math.floor(h/24); return `${d}d ago`;
-    }
-    // ----- Swipe and paging behavior -----
-    const container = document.getElementById('feed');
-    let isPaging = false;
-    const pageCooldown = 600; // milliseconds between pages
-
-    function cardsInView(){
-      return Array.from(document.querySelectorAll('.card'));
-    }
-    function currentIndex(){
-      const cs = cardsInView();
-      // pick the card whose center is closest to the viewport center
-      const center = container.scrollTop + container.clientHeight / 2;
-      let best = 0, bestDist = Infinity;
-      cs.forEach((c, i) => {
-        const rectTop = c.offsetTop;
-        const rectCenter = rectTop + c.offsetHeight / 2;
-        const d = Math.abs(rectCenter - center);
-        if(d < bestDist){ bestDist = d; best = i; }
-      });
-      return best;
-    }
-    function snapTo(i){
-      const cs = cardsInView();
-      if(i < 0 || i >= cs.length) return;
-      isPaging = true;
-      cs[i].scrollIntoView({ behavior: 'smooth', block: 'start' });
-      setTimeout(() => { isPaging = false; }, pageCooldown);
-    }
-
-    // Wheel paging, ignores tiny trackpad jitters
-    let wheelAccum = 0;
-    container.addEventListener('wheel', e => {
-      if(isPaging) return;
-      wheelAccum += e.deltaY;
-      const threshold = 60; // adjust sensitivity
-      if(wheelAccum > threshold){ snapTo(currentIndex()+1); wheelAccum = 0; }
-      if(wheelAccum < -threshold){ snapTo(currentIndex()-1); wheelAccum = 0; }
-    }, { passive: true });
-
-    // Touch swipe paging
-    let touchStartY = 0, touchStartTime = 0;
-    container.addEventListener('touchstart', e => {
-      if(e.touches.length !== 1) return;
-      touchStartY = e.touches[0].clientY;
-      touchStartTime = Date.now();
-    }, { passive: true });
-    container.addEventListener('touchend', e => {
-      const dy = (e.changedTouches?.[0]?.clientY || 0) - touchStartY;
-      const dt = Date.now() - touchStartTime;
-      const fast = dt < 450; // quick flick
-      const threshold = 50;
-      if(isPaging) return;
-      if(dy < -threshold && fast){ snapTo(currentIndex()+1); }
-      if(dy > threshold && fast){ snapTo(currentIndex()-1); }
-    });
-
-    // Keyboard support
-    container.addEventListener('keydown', e => {
-      if(['ArrowDown','PageDown',' '].includes(e.key)){ e.preventDefault(); snapTo(currentIndex()+1); }
-      if(['ArrowUp','PageUp'].includes(e.key)){ e.preventDefault(); snapTo(currentIndex()-1); }
-    });
-
-    // Start at the first card
-    snapTo(0);
+    function escapeHtml(str){ return String(str).replace(/[&<>"']/g, s => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[s])); }
+    function timeAgo(iso){ const sec = Math.floor((Date.now() - new Date(iso).getTime())/1000); if(sec < 60) return `${sec}s ago`; const m = Math.floor(sec/60); if(m < 60) return `${m}m ago`; const h = Math.floor(m/60); if(h < 24) return `${h}h ago`; const d = Math.floor(h/24); return `${d}d ago`; }
   </script>
 </body>
 </html>
-
-
