--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <header>
     <div class="pfp" aria-hidden="true"></div>
     <div class="title">
-      <b>@pk_fake_tok</b>
-      <span>20 videos, scan the QR to watch</span>
+      <b>@Kāpiti_Libraries_TikTOk</b>
+      <span>pecha kucha</span>
     </div>
     <button class="follow" id="followBtn" aria-pressed="false">Follow</button>
   </header>
@@ -131,7 +131,7 @@
           <source src="${item.src}" type="video/mp4" />
         </video>
         <div class="meta">
-          <div class="handle">@pk_fake_tok • ${index+1}/20</div>
+          <div class="handle">@Clark_Makerspace • ${index+1}/20</div>
           <div class="caption">${escapeHtml(item.caption)}</div>
           <div class="tags">${item.tags.map(t => escapeHtml(t)).join(' ')}</div>
         </div>
